<resources>
    <string name="app_name">DeviceControl</string>
    <string name="message">Testovacia verzia</string>
    <string name="messageZmena">Zmeny sa prejavia za par sekund</string>
    <string name="messageZmenaNoChange">Nic sa nezmenilo zmente aspon jeden parameter</string>
    <string name="loginButton">Prihlásenie</string>
    <string name="registerButton">Registrácia</string>
    <string name="develop">Vyvinuté pre Onesoft s.r.o</string>
    <string name="zadajte_meno_alebo_email">Zadajte meno alebo email</string>
    <string name="zadajte_heslo">Zadajte heslo</string>
    <string name="zabudnut_heslo">Zabudnuté heslo ?</string>
    <string name="vytvori_novy_ucet">Vytvoriť nový účet</string>
    <string name="zadaj_heslo">Zadaj heslo</string>
    <string name="zopakuj_heslo">Zopakujte heslo</string>
    <string name="registrovat">Registrovať</string>
    <string name="zadajte_emailovu_adresu">Zadajte emailovu adresu</string>
    <string name="zadajte_meno">Zadajte meno</string>
    <string name="infofirstlogin">Prvý krát prihlásený užívateľ musí nastaviť IP adresu zariadenia na pripojenie k monitorovanému zariadeniu a taktiež port zariadenia. Adresa a port sa možu neskorej meniť v nastaveniach v aplikacii.</string>
    <string name="prv_nastavenie_aplik_cie">Prvé nastavenie aplikácie</string>
    <string name="zadajte_ip_adresu">Zadajte IP adresu</string>
    <string name="zadajte_slo_portu">Zadajte číslo portu</string>
    <string name="pokracovat">Pokračovať</string>
    <string name="vybran_zariadenie">Vybrané zariadenie</string>
    <string name="zadajte_identifika_n_slo">Zadajte identifikačné číslo</string>
    <string name="al_ie_definovate_n_parametre">Ďalšie  parametre</string>
    <string name="dodato_n_nastavenia">Dodatočné nastavenia</string>
    <string name="addinfo">Podľa potreby je nutné nastaviť dodatočné nastavenia pre zvolené zariadenie.</string>
    <string name="t_ziadana">T-žiadaná</string>
    <string name="chod_regu_uk">Stav</string>
    <string name="temperatureexample"></string>
    <string name="t_ziadana_uk">Žiadaná</string>
    <string name="t_vonkajsiaia">Priestor</string>
    <string name="t_merana_kotol">Meraná</string>
    <string name="t_vonk_dis">Radiátory</string>
    <string name="t_vonkajsia_Teplota">Vonkajšia</string>
    <string name="merannie_tepla">Kotol</string>
    <string name="parametre_uk">Kúrenie</string>
    <string name="meranie_energi">Meranie teplá voda</string>
    <string name="ziadana_tuv">Žiadaná</string>
    <string name="ziadana_kotol">Žiadaná</string>
    <string name="chod_reg_kotol">Stav</string>
    <string name="chod_reg_tuv">Stav</string>
    <string name="energikw">22 kW</string>
    <string name="watermnozstvo">1255 L</string>
    <string name="merana_tuv">Meraná</string>
    <string name="cas_prog">Časový program:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cas_prog_v">Čas.Pro</string>
    <string name="parametre_na_zmenu_kurenie">Zmena Kurenia</string>
    <string name="info_kurenie">Informácie kúrenie</string>
    <string name="cislo_programu_kurenie">Program</string>
    <string name="iadan_tep_priestoru">Ž.tep. Priestoru</string>
    <string name="kurenie_Chod_Regulacie_change">Stav Regulácie</string>
    <string name="back">Back</string>
    <string name="zmeni">Zmeniť</string>
    <string name="kurenie_info">Informácie ktoré Vám pomôžu pri správe kúrenia.</string>
    <string name="kurenie_info_add">Sem treba napśať text</string>
    <string name="kotol_info">Informácie ktoré Vám pomôžu pri správe a nastavení kotla.</string>
    <string name="kotol_info_add">Sem treba napíať text</string>
    <string name="voda_info">Informácie ktoré Vám pomôžu pri správe a nastavení teplej úžitkovej vody.</string>
    <string name="voda_info_add">Sem treba napíať text</string>
    <string name="tuv_info_head">Informácie TuV</string>
    <string name="kotol_info_head">Informácie Kotol</string>
    <string name="kurenie_info_head">Informácie Kúrenie</string>
    <string name="kotolChangeTextView">Teplo Žiadaná</string>
    <string name="kurenieChangeTextViewHead">Zmena Kúrenia</string>
    <string name="kotolChangeTextViewHead">Zmena Kotol</string>
    <string name="vodaChangeTextViewHead">Zmena TuV</string>
    <string name="errorconnection">Internetové pripojenie zlihalo skontrolujte pripojenie</string>
    <string name="chooseDevice">Zvol zariadenie</string>
    <string name="program_apartman">Program</string>
    <string name="hladina_apartman">Hladina</string>
    <string name="time_for_device_apartman_kurenie">Čas zariadenia</string>
    <string name="prepinac_kurenie_apartman">Prepínač</string>
    <string name="priestor_apartman_kurenie">Priestor</string>
    <string name="apartman_kurenie_vystup">Výstup</string>
    <string name="apartman_kurenie_ziadana">Žiadaná</string>
    <string name="apartman_kurenie_cislo">Apartmán</string>
    <string name="apartmanovy_dom_smrek">Apartmánový dom Smrek</string>
    <string name="apartman_kurenie_podlahovka">Podlahovka</string>

    <string name="fero_footer">Fero riadenie</string>
    <string name="second_info_apartman">Informácie.</string>

    <string name="test_footer">Smart riadenie</string>
    <string name="smart_houme">Možnosti domu Test 1</string>
    <string name="kurenie_msart">Kúrenie</string>
    <string name="zavlaha_msart">Závlaha</string>
    <string name="bezpecnost_msart">Bezpeč</string>
    <string name="svetlosmart_msart">Svetlo</string>
    <string name="pr_zemie">Prízemie</string>
</resources>
