<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/root"
    android:background="@drawable/bcglogin"
    >
    <!--Pre pozadie layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/kuernieschematransparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitEnd"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/kurenieschema_transparent"
            />

    </LinearLayout>
    <!--Obsahuje all objekty na stranke-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="7"
        >
        <!--Logo objekt-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/logonesoft"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                android:background="@drawable/logoonesoft"
                />

        </LinearLayout>
        <!--Login Objekt-->
        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <EditText

                android:text=""
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/edit_text_login_next"
                android:background="@drawable/emailicon"
                android:textSize="20dp"
                android:textAlignment="center"
                android:hint="@string/zadajte_meno_alebo_email"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:paddingLeft="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

        </LinearLayout>
        <!--Password oobjekt-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >

            <EditText
                android:layout_marginTop="20dp"
                android:text=""
                android:hint="@string/zadaj_heslo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/edit_text_register_next"
                android:background="@drawable/emailicon"
                android:textSize="20dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:paddingLeft="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

        </LinearLayout>
        <!--forgott password objekt-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >
            <TextView
                android:id="@+id/text_view_forgot_passw_login_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zabudnut_heslo"
                android:gravity="right"
                android:paddingRight="30dp"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:fontFamily="sans-serif-thin"
                />

        </LinearLayout>
        <!--Prihlasenie a vytvrit novy ucet button objekt-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"

            >
            <Button
                android:id="@+id/buttonlogin"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/loginButton"
                android:textAllCaps="false"
                android:textColor="@color/btn_add_color"
                android:fontFamily="sans-serif-thin"
                android:textSize="20sp"
                android:layout_above="@+id/textView"
                android:background="@drawable/buttonloginnext"

                >

            </Button>

            <TextView
                android:id="@+id/text_view_new_registration_login_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vytvori_novy_ucet"
                android:gravity="center"
                android:textSize="15dp"
                android:clickable="true"
                android:fontFamily="sans-serif-thin"
                android:layout_below="@+id/relativeLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp" />

        </LinearLayout>
        <!--vyvynute text obbjekt-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            >
            <TextView

                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"

                android:fontFamily="sans-serif-thin"
                android:paddingLeft="70dp"
                android:text="@string/develop"
                android:textSize="20dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>