<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:id="@+id/loginbckmain"
    android:background="@drawable/bcglogin"
  >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logonesoft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/logoonesoft"

       />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:orientation="horizontal"
    android:layout_marginTop="60dp"
    >
    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/buttonloginnext"
        android:text="@string/loginButton"
        android:textAllCaps="false"
        android:textColor="@color/btn_add_color"
        android:fontFamily="sans-serif-thin"
        android:textSize="25sp"
        >
    </Button>
    <Button
        android:id="@+id/buttonregister"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/buttonloginnext"
        android:fontFamily="sans-serif-thin"
        android:text="@string/registerButton"
        android:textAllCaps="false"
        android:textColor="@color/btn_add_color"
        android:textSize="25sp"
        android:gravity="center"
        >

    </Button>

</LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/kuernieschema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:scaleType="center"
            android:src="@drawable/kurenieschema" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:layout_marginTop="60dp"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif-thin"
            android:text="@string/develop"
            android:textSize="20dp" />

    </LinearLayout>
</LinearLayout>


</RelativeLayout>